# interactiveGLSL

./: CMakeLists.txt  main.cpp
cmake/: FindGLFW3.cmake  FindGLM.cmake
core/: Timer.h  common.h
glad/: glad.cpp
shaders/: render.frag  render.vert
